--- a/app/assets/stylesheets/providers.css.scss
+++ b/app/assets/stylesheets/providers.css.scss
@@ -77,6 +77,9 @@ div #providerMain {
     #measurePopulationPercentage {
       font-weight:bold;
     }
+    #measureDetailTitle {
+      margin-left: 250px;
+    }
   }
   
   .paren {
